// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id    Int     @id @default(autoincrement())
  email String  @unique
  name  String?
  password String
  emailVerified DateTime?
  image         String?
  files File[]
  mindmaps Mindmap[]
  flashCards FlashCard[]
  summaries Summary[]
  learningTechniques LearningTechnique[]
  questionsAnswers QuestionAnswer[]
}
 
model File {
  id        Int      @id @default(autoincrement())
  filename  String
  data      Bytes
  author    User    @relation(fields: [authorId], references: [id])
  authorId  Int
}

model Mindmap {
  id        Int     @id @default(autoincrement())
  title     String
  content   String?
  published Boolean @default(false)
  author    User    @relation(fields: [authorId], references: [id])
  authorId  Int
}

model FlashCard {
  id        Int     @id @default(autoincrement())
  title     String
  content   String?
  published Boolean @default(false)
  author    User    @relation(fields: [authorId], references: [id])
  authorId  Int
}

model Summary {
  id        Int     @id @default(autoincrement())
  title     String
  content   String?
  published Boolean @default(false)
  author    User    @relation(fields: [authorId], references: [id])
  authorId  Int
}

model LearningTechnique {
  id        Int     @id @default(autoincrement())
  title     String
  content   String?
  published Boolean @default(false)
  author    User    @relation(fields: [authorId], references: [id])
  authorId  Int
}

model QuestionAnswer {
  id        Int     @id @default(autoincrement())
  title     String
  content   String?
  published Boolean @default(false)
  author    User    @relation(fields: [authorId], references: [id])
  authorId  Int
}
